atualizacao aplicação - estruturação

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <div class="imagem-caixa-pokemon"> <!-- criacao da imagem -->
     <!-- Audio inicial da nossa pagina web ( abertura pokemon ) dentro duma caixa article-->
     <article class="audio-pokedex">
-        <audio controls autoplay muted id="audio">
+        <audio controls muted id="audio">
             <source src="./audios/pokemon_abertura_musical.ogg" type="audio/ogg">
             <source src="./audios/pokemon_abertura_musical.mp3" type="audio/mpeg">
         </audio>
@@ -42,7 +42,7 @@
         </article>
 
         <article class="article-botao-Iniciar"> <!-- caixa article para encobrir o botao funcional-->
-            <button>Clique Aqui</button>
+            <a href="./paginas/escolhapoke.html">Clique Aqui</a>
         </article>
         
         <footer class="rodape-pagina"> <!-- caixa rodapé da pagina -->
