correção bug - dados não escontrados no game

--- a/paginas/escolhapoke.html
+++ b/paginas/escolhapoke.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="btns">
                         <!-- botões de escolha para continuar o game ou retornar a escolha -->
-                        <a href="./game.html">Sim</a>
+                        <a href="./game.html" onclick="salvarPokemon()">Sim</a>
                         <button onclick="DesabilitarLandingPage()">Não</button>
                     </div>
                 </div> <!-- fechamento da pagina de captura com display block apenas ao clique -->
